# dsld

./: .Rhistory  .gitignore  DESCRIPTION  NAMESPACE  README.md  z
BookFormat/: Appendices.qmd  Makefile  PartI.qmd  PartII.qmd  _quarto.yml  _quarto.yml~  dsldAll.qmd  dsldAppendices.qmd~  dsldCourse.md~  dsldCourse.qmd  dsldMain.qmd  dsldMain.qmd~  dsldPartIGraphTab.qmd  dsldPartII.qmd  index.qmd  (+1 more)
inst/: NM189GCode.R  README.md  pyproject.toml  takeALook_Py_R.py
inst/Book/: Appendices.qmd  PartI.qmd~  PartII.qmd~  intro.qmd  intro.qmd~
inst/Python/: Utils.py  conditDisparity.py  dsldConditDisparity_Py_R.py  dsldConfounders_Py_R.py  dsldFgrrm_Py_R.py  dsldFreqPCoord_Py_R.py  dsldFrrm_Py_R.py  dsldLinear_Py_R.py  dsldNclm_Py_R.py  dsldParCoord_Py_R.py  dsldPyConditDisparity.txt  dsldPyConfounders.txt  dsldPyLinear.txt  dsldPyScatterPlot3D.txt  dsldQeFairKNN_Py_R.py  dsldQeFairRF_Py_R.py  dsldQeFairRidgeLin_Py_R.py  dsldRpy2Scatterplot.py  dsldS3ToPyTest.py  dsldScatterPlot3D.py  dsldScatterPlot3D_Py_R.py  dsldTakeALookAround_PyRServe.py  dsldTakeALook_Py_R.py  dsld_Plotly_ScatterPlot3D_Py_R.py  parCoord_Py_R.py  setup.py  takeALook_Py_R.py
inst/examples/: graphical.ipynb  machine_learning.ipynb  tabular.ipynb
inst/src/dsldPy/: Utils.py  __init__.py  dsldPyBnLearn.py  dsldPyConditDisparity.py  dsldPyConfounders.py  dsldPyDensitybyS.py  dsldPyFairML.py  dsldPyFairUtils.py  dsldPyFreqPCoord.py  dsldPyFrequencybyS.py  dsldPyHunting.py  dsldPyLinear.py  dsldPyLogit.py  dsldPyML.py  dsldPyMatching.py  dsldPyQeFairML.py  dsldPyScatterPlot3D.py  dsldPyTakeALookAround.py
(+135 files in other folders)
